# circt-hls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  calyx_setup.sh  circt_tag.txt  comparisondriver.py  comparisonplotter.py  genComparisons.sh  requirements.txt
.github/workflows/: build.yml  build_and_test.yml  test.yml
.github/workflows/actions/build_circt_hls/: action.yml
.github/workflows/scripts/: run_tests.sh
cosim_test/: CMakeLists.txt  compile_regression.sh  lit.cfg.py  lit.site.cfg.py.in
cosim_test/suites/Dynamatic/: lit.local.cfg
cosim_test/suites/Dynamatic/bicg/: bicg.c  bicg.h  tst_bicg.c
cosim_test/suites/Dynamatic/fir/: fir.c  fir.h  tst_fir.c
cosim_test/suites/Dynamatic/gaussian/: gaussian.c  tst_gaussian.c
cosim_test/suites/Dynamatic/gemver/: gemver.c  tst_gemver.c
cosim_test/suites/Dynamatic/histogram/: histogram.c  histogram.h  tst_histogram.c  tst_histogram.cpp
cosim_test/suites/Dynamatic/if_loop_1/: if_loop_1.c  tst_if_loop_1.c
cosim_test/suites/Dynamatic/if_loop_2/: if_loop_2.c  tst_if_loop_2.c
cosim_test/suites/Dynamatic/if_loop_3/: if_loop_3.c  if_loop_3.h  tst_if_loop_3.c
cosim_test/suites/Dynamatic/iir/: iir.c  iir.h  tst_iir.c
cosim_test/suites/Dynamatic/image_resize/: image_resize.c  tst_image_resize.c
cosim_test/suites/Dynamatic/insertion_sort/: insertion_sort.c  tst_insertion_sort.c
cosim_test/suites/Dynamatic/kernel_2mm/: kernel_2mm.c  kernel_2mm.h  tst_kernel_2mm.c
cosim_test/suites/Dynamatic/kernel_3mm/: kernel_3mm.c  kernel_3mm.h  tst_kernel_3mm.c
cosim_test/suites/Dynamatic/loop_array/: loop_array.c  loop_array.h  tst_loop_array.c
cosim_test/suites/Dynamatic/matrix/: matrix.c  matrix.h  tst_matrix.c
cosim_test/suites/Dynamatic/matrix_power/: matrix_power.c  tst_matrix_power.c
cosim_test/suites/Dynamatic/matvec/: matvec.c  tst_matvec.c
cosim_test/suites/Dynamatic/memory_loop/: memory_loop.c  memory_loop.h  tst_memory_loop.c
cosim_test/suites/Dynamatic/mul_example/: mul_example.c  tst_mul_example.c
cosim_test/suites/Dynamatic/pivot/: pivot.c  tst_pivot.c
cosim_test/suites/Dynamatic/simple_example_1/: simple_example_1.c  simple_example_1.h  tst_simple_example_1.c
cosim_test/suites/Dynamatic/simple_example_2/: simple_example_2.c  tst_simple_example_2.c
cosim_test/suites/Dynamatic/simple_example_3/: simple_example_3.c  simple_example_3.h  tst_simple_example_3.c
cosim_test/suites/Dynamatic/stencil_2d/: stencil_2d.c  tst_stencil_2d.c
cosim_test/suites/Dynamatic/sumi3_mem/: sumi3_mem.c  tst_sumi3_mem.c
cosim_test/suites/Dynamatic/test_memory_1/: test_memory_1.c  tst_test_memory_1.c
cosim_test/suites/Dynamatic/test_memory_10/: test_memory_10.c  tst_test_memory_10.c
cosim_test/suites/Dynamatic/test_memory_2/: test_memory_2.c  test_memory_2.h  tst_test_memory_2.c
cosim_test/suites/Dynamatic/test_memory_3/: test_memory_3.c  test_memory_3.h  tst_test_memory_3.c
cosim_test/suites/Dynamatic/test_memory_4/: test_memory_4.c  tst_test_memory_4.c
cosim_test/suites/Dynamatic/test_memory_5/: test_memory_5.c  tst_test_memory_5.c
cosim_test/suites/Dynamatic/threshold/: threshold.c  (+1 more)
cosim_test/suites/circt-hls/: exponent.c  fir.c  lit.local.cfg  triangular.c
cosim_tests/: compile_regression.sh
cosim_tests/suites/circt-hls/: fir.c
eval/: ExperimentRunner  ExperimentRunner.py  all.json  all_flatten.json  dynamatic.json  experiment1.json
eval/dynamatic/FIR/: fir.dot
eval/dynamatic/histogram/: histogram.dot
eval/dynamatic/if_loop_1/: if_loop_1.dot  if_loop_1.mlir
eval/dynamatic/if_loop_2/: if_loop_2.dot
eval/dynamatic/matrix_power/: matrix_power.dot
examples/c/: fir.c  histogram.c  triangular.c
examples/c/exponent/: exponent.cpp
examples/c/fir/: fir.c
examples/c/if_loop_1/: if_loop_1.c  tst_if_loop_1.c
examples/c/if_loop_3/: if_loop_3.c  tst_if_loop_3.c
examples/c/triangular/: main.c  main.mlir
include/circt-hls/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h
include/circt-hls/Dialect/: CMakeLists.txt
include/circt-hls/Transforms/: CMakeLists.txt  Passes.h  Passes.td
integration_test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
integration_test/Polygeist/: call_polygeist.c
integration_test/hsdbg/: resolve_bundles.mlir
integration_test/mlir-resolve/: file1.mlir  file1.mlir.def
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/Cosim/: CMakeLists.txt  CosimDialect.cpp  CosimOps.cpp
lib/Dialect/Cosim/Transforms/: CMakeLists.txt  PassDetails.h  Passes.cpp
lib/Transforms/: AffineScalRep.cpp  AsyncifyCalls.cpp  CMakeLists.txt  CleanUnregisteredAttrs.cpp  MaxSSA.cpp  PassDetail.h  PushConstants.cpp  RenameFunc.cpp
other_tests/: regression.sh
stages/: __init__.py
stages/CIRCT/: __init__.py  stage.py
stages/MLIR/: stage.py
stages/Polygeist/: stage.py
test/: CMakeLists.txt  filelist.lst  lit.cfg.py  lit.site.cfg.py.in  regression.sh
test/Dialect/Cosim/: test-call-exec.mlir  test-call.mlir  test-compare.mlir  test-convert-stdcall.mlir  test-wrap.mlir
test/Transforms/: affine_scal_rep.mlir  asyncify.mlir  asyncify_errors.mlir
test/suites/Dynamatic/: matrix_power.cpp
test/suites/circt-hls/: triangular.c
tools/: CMakeLists.txt
tools/DynamaticParser/: DynamaticParser.py
tools/hls-opt/: CMakeLists.txt  hls-opt.cpp
tools/hlstool/: CMakeLists.txt  README.md  device.xdc  hlstool.in  synth.tcl
tools/hlt/: CMakeLists.txt
tools/hlt/Simulator/: CMakeLists.txt  hlt_verilator_CMakeLists.txt.in
tools/hlt/WrapGen/: BaseWrapper.cpp  CEmitterUtils.cpp  CMakeLists.txt  CalyxVerilatorWrapper.cpp  HandshakeVerilatorWrapper.cpp  StdWrapper.cpp  VerilatorEmitterUtils.cpp  WrapGen.cpp
tools/hsdbg/: CMakeLists.txt  README.md  hsdbg.in  hsdbg.py  main.py  pyproject.toml  viewer.py
tools/hsdbg/templates/: index.html
tools/mlir-resolve/: CMakeLists.txt  mlir-resolve.cpp
tools/test_scripts/: CMakeLists.txt  README.md  dyn_hlt_build_sim.in  dyn_hlt_build_tb.in  dyn_hlt_lower.in  dyn_hlt_run_sim.in  dyn_incrementally_lower.in  dyn_print_dot.in  dyn_show_sim_viz.in  hlt_test.in  lower_to_llvm.in  run_test_scripts.in
(+172 files in other folders)
